# termato

./: Cargo.toml  README.md  README_zh.md
examples/: config.toml
src/: config.rs  context.rs  data.rs  hooks.rs  i18n.rs  main.rs  timer.rs  ui.rs
