[package]
name = "termato"
version = "0.2.0"
edition = "2021"
description = "A beautiful terminal Pomodoro timer"
license = "MIT"

[[bin]]
name = "termato"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI argument parsing and shell completions
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization / configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# System notifications
notify-rust = "4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "6"

# Git repository detection (lightweight, no SSH/network)
git2 = { version = "0.20", default-features = false }

# Async runtime (for hooks)
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "time"] }

# Iterator utilities (heatmap rendering)
itertools = "0.14"

# Unicode width calculation (CJK alignment)
unicode-width = "0.2"

# Sound
rodio = { version = "0.20", optional = true }

[features]
default = []
sound = ["rodio"]
